# NemeioKB-main-firmware

./: .clang-format  .clang-format-ignore  .cproject  .gitattributes  .gitignore  .gitmodules  .mxproject  .project  CMakeLists.txt  LDLC_Keyboard.ioc  README.md  STM32L496VGTx_FLASH.ld  build_app.sh  build_bootloader.sh  buildall.sh  buildtools.sh  check_code_format.sh  init_build.sh  run-sonar.sh  set_build_env.sh  set_version.sh  usb476.ioc  validate.sh  version.txt
App/: Application.cpp  Application.hpp  ApplicationConfig.h  ConfigurationSwitcherAssembly.hpp  IApplication.hpp  Version.h  keyIDConfig.h  spiCommonConfig.h
Inc/: KeypadDefs.hpp  common.h  crc.h  dma.h  etl_profile.h  gpio.h  i2c.h  main.h  pinConfig.h  quadspi.h  rtc.h  spi.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h  tim.h  timing_macros.h
Inc/Images/: LDLC-logo.bmp.h  Witekio-logo.bmp.h  colorimetrie.h  img_test.bmp.h  key1.bmp.h  key2.bmp.h  key3.bmp.h  ldlccom-97527.bmp.h
Libraries/AppComm/: AbstractDataTransport.hpp  AppComm.cpp  AppComm.hpp  AppCommConfig.h  IDataTransportRxListener.hpp  PowerManagerActivityCmdDecorator.cpp  PowerManagerActivityCmdDecorator.hpp
Libraries/BLE/: BleActivationStrategy.hpp  BleHid.cpp  BleHid.hpp  BleRequestTimer.hpp  IBLECommStrategy.hpp  IITBLECommStrategyListener.hpp  ITBLECommStrategy.cpp  ITBLECommStrategy.hpp  NrfCommunication.cpp  NrfCommunication.hpp
Libraries/Battery/: Battery.cpp  Battery.h
Libraries/Benchmark/: CemTests.cpp  CemTests.hpp  DummyLog.cpp  DummyLog.hpp  ElectricalTests.cpp  ElectricalTests.hpp  EventLogFileDataTransport.cpp  EventLogFileDataTransport.hpp  FunctionalTests.cpp  FunctionalTests.hpp  ITestLog.hpp  TAPLog.cpp  TAPLog.hpp  TestBenchStatus.hpp  TestSuite.cpp  TestSuite.hpp
Libraries/CRC32/: STM32CRC32.cpp  STM32CRC32.hpp
Libraries/Configuration/: ConfigurationStorageAssembly.cpp  ConfigurationStorageAssembly.hpp
Libraries/Connectivity/: AbstractConnectivityState.cpp  AbstractConnectivityState.hpp  ConnectivityState.hpp  ConnectivityStrategySwitcher.hpp  IConnectivityListener.hpp
Libraries/Demo/: Demo.cpp  Demo.hpp
Libraries/Display/: Displayer.cpp  Displayer.hpp
Libraries/FatFS/: FatFS_custom.cpp  FatFS_custom.h
Libraries/FileSystem/: FileSystemTrimming.cpp  FileSystemTrimming.hpp
Libraries/FirmwareUpdate/: FirmwareUpdateAssembly.cpp  FirmwareUpdateAssembly.hpp  FirmwareUpdateTimeouts.hpp  FlashInterface.cpp  FlashInterface.hpp  INRFFirmwarePackageListener.hpp  (+10 more)
Pipelines/: cpu.yaml
Src/: crc.c  dma.c  freertos.c  gpio.c  httpd_structs.h  i2c.c  main.cpp  newlib_stubs.c  quadspi.c  rtc.c  spi.c  spiCommonConfig.cpp  stm32l4xx_hal_msp.c  stm32l4xx_it.c  system_stm32l4xx.c  tim.c
Tools/QSPI/LfsGenerator/: CMakeLists.txt
Tools/QSPI/LfsGenerator/src/: mklfs.c
Tools/QSPI/PrepareImage/: CMakeLists.txt  PrepareImage.cpp
binaries/: 0.2.42.10785-binaries.tar.bz2  0.2.42.10817-binaries.tar.bz2  0.2.43.10847-binaries.tar.bz2  0.2.44.10907-binaries.tar.bz2  0.2.46.11192-binaries.tar.bz2  0.2.47.11193-binaries.tar.bz2
cmake-tools/: erase.in  flash.in  flash.sh  tools.cmake
test/: CMakeLists.txt
test/inc/: FirmwareEnvironmentTest.hpp  ImageTestValues.hpp  KeyboardParametersTestValues.hpp  LayoutModifierStrategy_test.hpp  gtest_helpers.hpp
test/samples/LayoutStorageTest/: layout_invalid.lyt
test/samples/LayoutWriterTest/: layout_package.lyt
test/samples/UserConfigurationStorageTest/user_configuration_invalid/: .ucfg
test/samples/UserConfigurationStorageTest/user_configuration_valid/: .ucfg
test/src/: AlternateLED_test.cpp  AutoLock_test.cpp  BQ24296Charger_test.cpp  BatteryInformationCmd_test.cpp  BatteryStateMachine_test.cpp  BlinkingLED_test.cpp  CborKeepAliveRespCodec_test.cpp  CborKeyboardParametersCodec_test.cpp  CborLayoutConfigurationCodec_test.cpp  CborLayoutConfigurationDescriptorCodec_test.cpp  CborLayoutListCodec_test.cpp  CborLayoutMetadataCodec_test.cpp  CborUserConfigurationCodec_test.cpp  ConfigurationSwitcher_test.cpp  DFUPackets_test.cpp  Delay_test.cpp  DevicePropertiesEnvStorage_test.cpp  DevicePropertiesRamStorage_test.cpp  DeviceProperties_test.cpp  DoubleClickKeyHandler_test.cpp  EventLog_test.cpp  FactoryResetCmd_test.cpp  FactoryReset_test.cpp  FirmwareEnvironmentRedundant_test.cpp  FirmwareEnvironment_test.cpp  FirmwareUpdate_test.cpp  FlashWriteBuffer_test.cpp  HWTimerWaitHelper_test.cpp  IT8951ControllerUpgrader_test.cpp  InvertedLED_test.cpp  KeepAliveCmd_test.cpp  KeyMessageDispatcher_test.cpp  KeyProtocolManager_test.cpp  KeyboardParametersCmd_test.cpp  KeyboardParameters_test.cpp  KeypadScanCodeConverter_test.cpp  LED_test.cpp  LayoutConfigurationWriter_test.cpp  LayoutStorage_test.cpp  LayoutWriter_test.cpp  (+25 more)
test/src/Configuration/: uuid_helper.hpp
test/src/Display/LayoutModifiers/: LayoutModifiersState_test.cpp
test/src/Display/LayoutModifiers/LayoutModifierConverter/: DefaultConvertModifierStrategy_test.cpp  MacConvertModifierStrategy_test.cpp
test/src/Display/LayoutModifiers/LayoutModifierUpdate/: DefaultLayoutModifierStrategy_test.cpp  MacLayoutModifierStrategy_test.cpp  NoLayoutModifierStrategy_test.cpp
test/src/mocks/: MockAppCommTxListener.hpp  MockApplication.hpp  MockBLEEventListener.hpp  MockBattery.hpp  MockBatteryStateListener.hpp  MockBleChip.hpp  MockBlockDevice.hpp  MockCRC32.hpp  MockConfChangeListener.hpp  MockConfigurationParser.hpp  MockDataReader.hpp  MockDecompressor.hpp  MockDevicePropertiesStorage.hpp  MockDoubleClickKeyListener.hpp  MockDrawStrategy.hpp  MockFactoryReset.hpp  MockFileDecompressor.hpp  MockFileSystem.hpp  MockFileSystemCoordinator.hpp  MockFirmwareUpdate.hpp  MockFlashInterface.hpp  MockGPIOController.hpp  MockHWTimer.hpp  MockI2C.hpp  MockKeepAliveManager.hpp  MockKeyMessageHandler.hpp  MockKeyProtocolListener.hpp  MockKeyboardParametersCodec.hpp  MockKeyboardStatus.hpp  MockLED.hpp  MockLayoutConfigurationCodec.hpp  MockLayoutMetadataCodec.hpp  MockLayoutModifierListener.hpp  MockLayoutStorage.hpp  MockMutex.hpp  MockNemeioKeypadPressedListener.hpp  MockPowerController.hpp  MockPowerManageable.hpp  MockPowerManager.hpp  MockSFU.hpp  (+17 more)
(+866 files in other folders)
